# cachelocal

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py
src/cachelocal/: __init__.py  dll.py  fifo.py  lfu.py
src/localcache/: __init__.py  fifo.py  lru.py
tests/: test_fifo.py  test_lfu.py  test_lru.py
